# ZeroToHeroAlbion

./: .gitignore  AlbionZeroToHero.pro  CMakeLists.txt  README.md  build.bat  build.ps1  deploy.bat  resources.qrc  run_debug.bat
release/: qt.conf
src/: addbuildialog.cpp  addbuildialog.h  build.cpp  build.h  buildcard.cpp  buildcard.h  buildconstructor.cpp  buildconstructor.h  buildpool.cpp  buildpool.h  gamesettings.cpp  gamesettings.h  itemslot.cpp  itemslot.h  leaderboard.cpp  leaderboard.h  leaderboardwidget.cpp  leaderboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  organizerwidget.cpp  organizerwidget.h  playerstats.cpp  playerstats.h  playerstatsdialog.cpp  playerstatsdialog.h  playerstatwidget.cpp  playerstatwidget.h  roledialog.cpp  roledialog.h  rollbuildwidget.cpp  rollbuildwidget.h  settingsdialog.cpp  settingsdialog.h  starscalculatorwidget.cpp  starscalculatorwidget.h
